limiting the max API to 6. Targit is 4

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,8 @@
 
     <uses-sdk
             android:minSdkVersion="4"
-            android:targetSdkVersion="6">
+            android:targetSdkVersion="4"
+            android:maxSdkVersion="6">
     </uses-sdk>
 
     <uses-permission android:name="android.permission.VIBRATE"/>
